# fuel-sim-mpi

./: BuildInstruction  CMakeLists.txt  Config.h.in  FuelPinSF-mpi.cc  FuelPinSF.cc  README  README.txt
Analysis/SortData/: Sort.C  Sort.h  SortTheTree.C
Analysis/TreeSelector/: FuelAnalysis.C  FuelAnalysis.h  runCopperCanBG.C  runCopperCanSF.C
SaG4n/include/: G4SaG4nParticleHP2AInelasticFS.hh  G4SaG4nParticleHP2N2AInelasticFS.hh  G4SaG4nParticleHP2NAInelasticFS.hh  G4SaG4nParticleHP2NDInelasticFS.hh  G4SaG4nParticleHP2NInelasticFS.hh  G4SaG4nParticleHP2NPInelasticFS.hh  G4SaG4nParticleHP2PInelasticFS.hh  G4SaG4nParticleHP3AInelasticFS.hh  G4SaG4nParticleHP3NAInelasticFS.hh  G4SaG4nParticleHP3NInelasticFS.hh  G4SaG4nParticleHP3NPInelasticFS.hh  G4SaG4nParticleHP4NInelasticFS.hh  G4SaG4nParticleHPAInelasticFS.hh  G4SaG4nParticleHPAngular.hh  G4SaG4nParticleHPAngularP.hh  G4SaG4nParticleHPArbitaryTab.hh  G4SaG4nParticleHPBGGNucleonInelasticXS.hh  G4SaG4nParticleHPCapture.hh  G4SaG4nParticleHPCaptureData.hh  G4SaG4nParticleHPCaptureFS.hh  G4SaG4nParticleHPChannel.hh  G4SaG4nParticleHPChannelList.hh  G4SaG4nParticleHPContAngularPar.hh  G4SaG4nParticleHPContEnergyAngular.hh  G4SaG4nParticleHPD2AInelasticFS.hh  G4SaG4nParticleHPDAInelasticFS.hh  G4SaG4nParticleHPDInelasticFS.hh  G4SaG4nParticleHPData.hh  G4SaG4nParticleHPDataPoint.hh  G4SaG4nParticleHPDataUsed.hh  G4SaG4nParticleHPDeExGammas.hh  G4SaG4nParticleHPDiscreteTwoBody.hh  G4SaG4nParticleHPElastic.hh  G4SaG4nParticleHPElasticData.hh  G4SaG4nParticleHPElasticFS.hh  G4SaG4nParticleHPElementData.hh  G4SaG4nParticleHPEnAngCorrelation.hh  G4SaG4nParticleHPEnergyDistribution.hh  G4SaG4nParticleHPEvapSpectrum.hh  G4SaG4nParticleHPFCFissionFS.hh  (+72 more)
SaG4n/src/: G4SaG4nParticleHP2AInelasticFS.cc  G4SaG4nParticleHP2N2AInelasticFS.cc  G4SaG4nParticleHP2NAInelasticFS.cc  G4SaG4nParticleHP2NDInelasticFS.cc  G4SaG4nParticleHP2NInelasticFS.cc  G4SaG4nParticleHP2NPInelasticFS.cc  G4SaG4nParticleHP2PInelasticFS.cc  G4SaG4nParticleHP3AInelasticFS.cc  G4SaG4nParticleHP3NAInelasticFS.cc  G4SaG4nParticleHP3NInelasticFS.cc  G4SaG4nParticleHP3NPInelasticFS.cc  G4SaG4nParticleHP4NInelasticFS.cc  G4SaG4nParticleHPAInelasticFS.cc  G4SaG4nParticleHPAngular.cc  G4SaG4nParticleHPArbitaryTab.cc  G4SaG4nParticleHPBGGNucleonInelasticXS.cc  G4SaG4nParticleHPCapture.cc  G4SaG4nParticleHPCaptureData.cc  G4SaG4nParticleHPCaptureFS.cc  G4SaG4nParticleHPChannel.cc  G4SaG4nParticleHPChannelList.cc  G4SaG4nParticleHPContAngularPar.cc  G4SaG4nParticleHPContEnergyAngular.cc  G4SaG4nParticleHPD2AInelasticFS.cc  G4SaG4nParticleHPDAInelasticFS.cc  G4SaG4nParticleHPDInelasticFS.cc  G4SaG4nParticleHPData.cc  G4SaG4nParticleHPDeExGammas.cc  G4SaG4nParticleHPDiscreteTwoBody.cc  G4SaG4nParticleHPElastic.cc  G4SaG4nParticleHPElasticData.cc  G4SaG4nParticleHPElasticFS.cc  G4SaG4nParticleHPElementData.cc  G4SaG4nParticleHPEnAngCorrelation.cc  G4SaG4nParticleHPFCFissionFS.cc  G4SaG4nParticleHPFFFissionFS.cc  G4SaG4nParticleHPFSFissionFS.cc  G4SaG4nParticleHPFastLegendre.cc  G4SaG4nParticleHPFastLegendre_14.cc  G4SaG4nParticleHPFastLegendre_18.cc  (+66 more)
include/: ActionInitialization.hh  ActivityTable.hh  Analysis.hh  AnalysisMPI.hh  DetectorConstruction.hh  DetectorConstruction.hh.simple  EventAction.hh  FissionGenerator.hh  G4FissLib_new.hh  G4FissionLibrary_new.hh  G4IonPhysicsPHP_new.hh  GB01BOptrChangeCrossSection.hh  GB01BOptrMultiParticleChangeCrossSection.hh  MaterialFile.hh  MyFissionLibrary.hh  MyRadioactiveDecayBase.hh  MyRadioactiveDecayBaseMessenger.hh  MyRadioactiveDecayPhysics.hh  MySFDecay.hh  MyStackingAction.hh  ParallelWorldForSplitting.hh  ParticleSourceFromFile.hh  PhysicsList.hh  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMPI.hh  RunActionMasterMPI.hh  ScintilatorHit.hh  ScintilatorSD.hh  SteppingAction.hh  TrackingAction.hh
input/: BWR-low-nuclide-vector.plt  DummyActivity.txt  MetaStables.txt  SKB-TR-10-13-BWR-CRAM-37years-nuclide-vector.plt  SKB-TR-10-13-PWR-5years-nuclide-vector-truncated.plt  SKB-TR-10-13-PWR-5years-nuclide-vector.plt  SKB-TR-10-13-PWR_MCNP_matls.inp  SKB-TR-10-13-PWR_MCNP_matls_new.inp  SKB-TR-10-13-PWR_gamma_spectrum.txt  SKB-TR-10-13-PWR_neutron_spectrum.txt  actinides.txt  activities-BWR-low.txt  activities-BWR.txt  activities.txt  activity-nat-Pu.txt  atomic-mass-eval-2016.txt  elements.txt  test_mat.plt
macros/: Cf252.mac  Cm244.mac  U238.mac  vis.mac
src/: ActionInitialization.cc  ActivityTable.cc  AnalysisMPI.cc  DetectorConstruction.cc  DetectorConstruction.cc.simple  EventAction.cc  FissionGenerator.cc  G4FissLib_new.cc  G4FissionLibrary_new.cc  G4IonPhysicsPHP_new.cc  GB01BOptrChangeCrossSection.cc  GB01BOptrMultiParticleChangeCrossSection.cc  MaterialFile.cc  MyFissionLibrary.cc  MyRadioactiveDecayBase.cc  MyRadioactiveDecayBaseMessenger.cc  MyRadioactiveDecayPhysics.cc  MySFDecay.cc  MyStackingAction.cc  NeutronHPMessenger.cc  NeutronHPphysics.cc  ParallelWorldForSplitting.cc  ParticleSourceFromFile.cc  ParticleSourceFromFile.cc.test  PhysicsList.cc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMPI.cc  RunActionMasterMPI.cc  ScintilatorHit.cc  ScintilatorSD.cc  SteppingAction.cc  TrackingAction.cc  TrackingMessenger.cc
